--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "react-dom": "^16.11.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.2.0",
-    "sockette": "^2.0.6",
-    "styled-components": "^4.4.0"
+    "sockette": "^2.0.6"
   },
   "scripts": {
     "start": "react-scripts start",
