Update travis ci config - build and deploy docker image.

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,15 +2,29 @@ language: node_js
 node_js:
   - "12"
 
+env:
+  global:
+    - IMAGE_NAME=${DOCKER_ACCOUNT}/photo-market-ui
+
 services:
   - docker
 
 script:
+  - >
+    echo "Version: ${TRAVIS_BUILD_NUMBER}" > ./public/version.txt &&
+    echo "Git commit hash: $(git log --format=%h -1)" >> ./public/version.txt
   - npm run build
+  - docker build -f Dockerfile -t ${IMAGE_NAME} .
 
-#deploy:
-#  skip_cleanup: true
-#  provider: script
-#  script: bash docker_push.sh
-#  on:
-#    branch: master
+deploy:
+  skip_cleanup: true
+  provider: script
+  script: bash docker_push.sh
+  on:
+    branch: master
+
+
+
+# Job lifecycle:              https://docs.travis-ci.com/user/job-lifecycle/
+# Minimal and Generic images  https://docs.travis-ci.com/user/languages/minimal-and-generic/
+# Using Docker in Builds      https://docs.travis-ci.com/user/docker/
