--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "amazon-cognito-identity-js": "^3.2.0",
     "aws-sdk": "^2.572.0",
     "axios": "^0.19.0",
+    "query-string": "^6.9.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-router-dom": "^5.1.2",
