--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "amazon-cognito-identity-js": "^3.2.0",
     "aws-sdk": "^2.574.0",
     "axios": "^0.19.0",
+    "formik": "^2.0.4",
     "query-string": "^6.9.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.2.0",
-    "sockette": "^2.0.6"
+    "sockette": "^2.0.6",
+    "yup": "^0.27.0"
   },
   "scripts": {
     "start": "react-scripts start",
