--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@aws-amplify/api": "^1.2.4",
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-brands-svg-icons": "^5.11.2",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/react-fontawesome": "^0.1.7",
     "amazon-cognito-identity-js": "^3.2.0",
+    "aws-amplify": "^1.2.4",
+    "aws-amplify-react": "^2.5.4",
     "aws-sdk": "^2.574.0",
     "axios": "^0.19.0",
     "formik": "^2.0.4",
