--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 REACT_APP_COGNITO_USER_POOL_ID=us-east-1_69OWWddMZ
 REACT_APP_COGNITO_CLIENT_ID=4mldl4aumvbk660dh0iuhfsq1k
+REACT_APP_API_URL=http://localhost:8080
