--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "photo-market-ui",
   "version": "0.1.0",
   "private": true,
+  "repository": {
+    "url": "https://github.com/photo-market/photo-market-ui"
+  },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-brands-svg-icons": "^5.11.2",
