--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "photo-market-ui",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8080",
   "repository": {
     "url": "https://github.com/photo-market/photo-market-ui"
   },
